--- a/src/components/party-panel/party-panel.html
+++ b/src/components/party-panel/party-panel.html
@@ -41,7 +41,7 @@
                 </div>
                 <div class="party-form-group party-checkbox-group">
                     <input type="checkbox" id="party-panel-create-joinashost" />
-                    <label for="party-panel-create-joinashost">New members join as host</label>
+                    <label for="party-panel-create-joinashost">Allow all members to control playback (co-host)</label>
                 </div>
                 <button id="party-panel-create-submit" class="party-btn party-btn-primary party-btn-full">
                     <svg viewBox="0 0 24 24" width="16" height="16" fill="currentColor">
