--- a/src/components/party-popover/party-popover.html
+++ b/src/components/party-popover/party-popover.html
@@ -46,7 +46,7 @@
                     </div>
                     <div class="party-form-group party-checkbox-group">
                         <input type="checkbox" id="party-create-joinashost" />
-                        <label for="party-create-joinashost">New members join as host</label>
+                        <label for="party-create-joinashost">Allow all members to control playback (co-host)</label>
                     </div>
                     <button id="party-create-submit" class="party-btn party-btn-primary party-btn-full">
                         <svg viewBox="0 0 24 24" width="18" height="18" fill="currentColor">
